# liv

./: .gitignore  BLINK_BUG_FIX.md  BLINK_FIXED.md  BdfFont.cpp  BdfFont.h  CACHE_DEDUPLICATION.md  CHAIN_VS_PARALLEL.md  CHANGELOG_CONFIG_SYSTEM.md  CHANGELOG_PIXEL_MAPPER.md  CLOCAL_PROBLEM.md  CMakeLists.txt  CONFIG_README.md  DELETE_ELEMENT_FEATURE.md  DIAGNOSE_GPIO0_LOW.md  DTR_RTS_LOGIC_NOTE.md  DisplayManager.cpp  DisplayManager.h  ESP32_DEMO_STATUS.md  ESP32_RESTART_FIX.md  FINAL_SOLUTION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_SUMMARY.txt  FIX_DESCENDERS.md  FRAME_LOSS_FIX.md  INVERTED_LOGIC_CONFIRMED.md  LEDMatrix_UPDATE_SUMMARY.md  LIBRARY_UPDATED.md  LedImgViewer.cpp  Makefile  PERFORMANCE_FIX.md  PIXEL_MAPPER_INFO.md  PREAMBLE_PROTOCOL.md  PROTOCOL.md  QUICK_START_DTR_RTS.md  README.md  README_DTR_RTS_FIX.md  README_STRUCTURE.md  README_TEST_SCREEN2.md  SOLUTION_GPIO0_PROBLEM.md  SUMMARY.md  (+33 more)
LEDMatrix/: BLINK_FEATURE.md  CHANGELOG.md  INSTALLATION.md  LEDMatrix.cpp  LEDMatrix.h  QUICKSTART.md  README.md  STRUCTURE.txt  keywords.txt  library.properties
LEDMatrix/examples/AdvancedDemo/: AdvancedDemo.ino
LEDMatrix/examples/AlarmSystem/: AlarmSystem.ino
LEDMatrix/examples/BasicUsage/: BasicUsage.ino
LEDMatrix/examples/BlinkingText/: BlinkingText.ino
LEDMatrix/examples/DeleteElement/: DeleteElement.ino
LEDMatrix/examples/DiagnosticTest/: DiagnosticTest.ino
LEDMatrix/examples/DualScreen/: DualScreen.ino
LEDMatrix/examples/Esp32Demo/: Esp32Demo.ino  README.md  run.sh
LEDMatrix/examples/InteractiveTest/: InteractiveTest.ino
LEDMatrix/examples/MinimalTest/: MinimalTest.ino
LEDMatrix/examples/SimpleDemo/: SimpleDemo.ino
LEDMatrix/examples/SimpleDemo_Debug/: SimpleDemo_Debug.ino
LEDMatrix/examples/SimpleDemo_Fixed/: SimpleDemo_Fixed.ino
LEDMatrix/examples/TestLEDMatrix/: TestLEDMatrix.ino
docs/: FILES_CREATED.txt  LEDMatrix_Standalone.ino  PROJECT_SUMMARY.md  QUICK_FIX.md  START_HERE.txt  TROUBLESHOOTING.md
pgm/: DisplSeg.h  FRAM.h  LedRgb.h  LedRgb.h.bak  MATRIX_COMM_USAGE.md  Queue.h  README.md  counter.cpp  counter.hpp  gift.h  global.h  language.h  led_visualizer.py  libraries.txt  matrix_comm.cpp  matrix_comm.h  mp3.h  myLcd.cpp  myLcd.hpp  ota.h  pcf.cpp  pcf.h  pgm.ino  pgm.ino.bak  run.sh  test.h  updater.h
tests/: check_struct_size  check_struct_size.cpp  test.py  test_detailed.cpp  test_final.cpp  test_offsets.cpp  test_padding.cpp  test_serial.py  test_size.cpp  test_sizes.cpp  test_struct.cpp
